fix index load nav

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Card from '../components/Card.astro';
 <Layout title="Portfolio">
 	<div class="container h-screen">
 		<main>
-			<Nav client:load/>
+			<Nav/>
 			<div class="icon">
 				<img class="icon"  src="/icon.png" alt="icon"/>
 			</div>
