--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -23,9 +23,11 @@
 	<script>
 		const toggleBtn = document.querySelector('.toggle-btn')! as HTMLElement
 		const DropDownMenu = document.querySelector('.dropdown-menu')! as HTMLElement
+		const toggleBtnIcon = document.querySelector('.toggle-btn svg')! as HTMLElement
 
 		toggleBtn.onclick = function () {
 			DropDownMenu.classList.toggle('open')
+			toggleBtnIcon.classList.toggle('motion')
 		}
 	</script>
 </nav>
@@ -34,7 +36,17 @@
 svg {
 	fill: white;
 	width: 24px;
+	
 }
+.toggle-btn svg {
+	transform: rotate(0deg);
+	transition: transform .2s ease-in-out;
+}
+
+.toggle-btn svg.motion {
+	transform: rotate(90deg);
+}
+
 nav {
 	width: 100%;
 	height: 60px;
@@ -65,19 +77,19 @@ li {
 	width: 300px;
 	height: 0;
 	opacity: 1;
-	background: rgba(255, 255, 255, 0.1);
+	background: rgba(255, 255, 255, 0.3);
 	backdrop-filter: blur(5px);
 	border-radius: 10px;
 	overflow: hidden;
-	transition: height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+	transition: height .8s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .dropdown-menu li:hover {
-	background: rgba(255, 255, 255, 0.3);
+	background: rgba(255, 255, 255, 0.5);
 }
 
 .dropdown-menu.open {
-	height: 240px;
+	height: 220px;
 }
 
 .dropdown-menu li {
