font weight chenged

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -16,7 +16,7 @@ const { href, title, body, desc } = Astro.props;
 			src={href}
 			alt={title}/>
 		<div class="w-full flex flex-col justify-start ml-2 p-2">
-			<p class="text-center text-white text-sm bg-gray-700 shrink-0 rounded-2xl font-semibold tracking-widest">{desc}</p>
+			<p class="text-center text-white text-sm bg-gray-700 shrink-0 rounded-2xl font-semibold tracking-wider">{desc}</p>
 			<h5 class="text-xl text-black font-medium">{title}</h5>
 			<p class="text-sm text-black font-base">{body}</p>
 		</div>
