--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -4,20 +4,20 @@
 
 <nav>
 	<ul>
-		<li><a href="/">Home</a></li>
-		<li><a href="/photos">Photos</a></li>
-		<li><a href="/works">Works</a></li>
-		<li><a href="/contact">Contact</a></li>
+		<li><a href="/" class="font-bold">Home</a></li>
+		<li><a href="/photos" class="font-bold">Photos</a></li>
+		<li><a href="/works" class="font-bold">Works</a></li>
+		<li><a href="/contact" class="font-bold">Contact</a></li>
 	</ul>
 	<div class="toggle-btn">
 		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
 	</div>
 		
 	<div class="dropdown-menu">
-		<li><a href="/">Home</a></li>
-		<li><a href="/photos">Photos</a></li>
-		<li><a href="/works">Works</a></li>
-		<li><a href="/contact">Contact</a></li>
+		<li><a href="/" class="font-bold">Home</a></li>
+		<li><a href="/photos" class="font-bold">Photos</a></li>
+		<li><a href="/works" class="font-bold">Works</a></li>
+		<li><a href="/contact" class="font-bold">Contact</a></li>
 	</div>
 
 	<script>
