--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,30 +11,30 @@ import Card from '../components/Card.astro';
 			<div class="icon">
 				<img class="icon"  src="/icon.png" alt="icon"/>
 			</div>
-			<h1 class="text-4xl font-bold text-center">apple</h1>
+			<h1 class="text-4xl font-black text-center">apple</h1>
 			<div class="w-max m-4">
-				<p class="animate-typing overflow-hidden whitespace-nowrap border-r-4 border-r-white pr-5 text-xl text-white font-medium mt-8 mb-8">Hi, I'm apple!<br>This page is about me.</p>
+				<p class="animate-typing overflow-hidden whitespace-nowrap border-r-4 border-r-white pr-5 text-xl text-white font-light mt-8 mb-8">Hi, I'm apple!<br>This page is about me.</p>
 			</div>
-
-			<Card 
-				href='/photoshop.png',
-				title='Photoshop',
-				body='画像編集・合成'
-				desc='Software'
-			/>
-			<Card
-				href='/illustrator.png',
-				title='Illustrator',
-				body='グラフィック作成',
-				desc='Software'
-			/>
-			<Card
-				href='python.png',
-				title='Python'
-				body='DiscordBot開発'
-				desc='Programming'
-			/>
-
+			<div class="card">
+				<Card 
+					href='/photoshop.png',
+					title='Photoshop',
+					body='画像編集・合成'
+					desc='Software'
+				/>
+				<Card
+					href='/illustrator.png',
+					title='Illustrator',
+					body='グラフィック作成',
+					desc='Software'
+				/>
+				<Card
+					href='python.png',
+					title='Python'
+					body='DiscordBot開発'
+					desc='Programming'
+				/>
+			</div>
 		</main>
 	</div>
 </Layout>
@@ -64,7 +64,9 @@ import Card from '../components/Card.astro';
 		height: auto;
 		z-index: -1;
 	}
-	
+	.container{
+		margin: 0 auto;
+	}
 	.icon {
 		display: flex;
 		margin: 1em auto .5em;
