fix safari blur bug

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -63,6 +63,9 @@ nav ul{
 li {
 	list-style: none;
 }
+nav li:hover{
+	color: orange;
+}
 .toggle-btn {
 	margin: .5rem;
 	cursor: pointer;
@@ -78,6 +81,7 @@ li {
 	height: 0;
 	opacity: 1;
 	background: rgba(255, 255, 255, 0.2);
+	-webkit-backdrop-filter: blur(20px);
 	backdrop-filter: blur(20px);
 	border-radius: 10px;
 	overflow: hidden;
