--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -78,7 +78,7 @@ li {
 	width: 300px;
 	height: 0;
 	opacity: 1;
-	background: rgba(255, 255, 255, 0.2);
+	background: #a0a0a015;
 	-webkit-backdrop-filter: blur(20px);
 	backdrop-filter: blur(20px);
 	border-radius: 10px;
