--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,7 +38,7 @@ const { title } = Astro.props;
 	html, body {
 		height: 100vh;
 		background-attachment:fixed;
-		@apply bg-gradient-to-br from-gray-800 to-neutral-600 !important;
+		@apply bg-gradient-to-r from-slate-900 to-slate-700 !important;
 	}
 	code {
 		font-family:
