--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -33,6 +33,7 @@
 </nav>
 
 <style>
+	
 svg {
 	fill: white;
 	width: 24px;
@@ -62,6 +63,11 @@ nav ul{
 }
 li {
 	list-style: none;
+	color: #fff;
+	transition: color .8s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+nav li:hover {
+	color: #93bccd;
 }
 .toggle-btn {
 	margin: .5rem;
@@ -78,16 +84,15 @@ li {
 	width: 300px;
 	height: 0;
 	opacity: 1;
-	background: #a0a0a015;
-	-webkit-backdrop-filter: blur(20px);
-	backdrop-filter: blur(20px);
+	background: #fff;
 	border-radius: 10px;
 	overflow: hidden;
 	transition: height .8s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .dropdown-menu li:hover {
-	background: rgba(255, 255, 255, 0.4);
+	color: #3b667f;
+	background: #ddebf0;
 }
 
 .dropdown-menu.open {
@@ -95,10 +100,12 @@ li {
 }
 
 .dropdown-menu li {
+	border-radius: 10px;
 	padding: 0.7rem;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	color: #333;
 }
 
 /*responsive*/
