--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
-import Nav from '../components/Nav.astro'
+import Nav from '../components/Nav.astro';
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+import SocialCard from '../components/SocialCard.astro';
 ---
 
 <Layout title="Portfolio">
@@ -12,7 +13,8 @@ import Card from '../components/Card.astro';
 				<img class="icon"  src="/icon.png" alt="icon"/>
 			</div>
 			<h1 class="text-4xl font-black text-center">apple</h1>
-			<div class="w-max m-4">
+			<SocialCard/>
+			<div class="w-max m-4 typing">
 				<p class="animate-typing overflow-hidden whitespace-nowrap border-r-4 border-r-white pr-5 text-xl text-white font-light mt-8 mb-8">Hi, I'm apple!<br>This page is about me.</p>
 			</div>
 			<div class="card">
@@ -70,8 +72,7 @@ import Card from '../components/Card.astro';
 	.icon {
 		display: flex;
 		margin: 1em auto .5em;
-}
-
+	}
 	img.icon { 
 		border-radius: 50%;
 		width: 70%;
