--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -3,6 +3,7 @@
 ---
 
 <nav>
+	<h1 class="font-black">Portfolio</h1>
 	<ul>
 		<li><a href="/" class="font-bold">Home</a></li>
 		<li><a href="/photos" class="font-bold">Photos</a></li>
@@ -55,15 +56,16 @@ nav {
 	margin: 0 auto;
 	display: flex;
 	align-items: center;
-	justify-content: flex-end;
+	justify-content: space-between;
 }
 nav ul{
 	display: flex;
 	gap: 2rem;
 }
-li {
+nav li {
 	list-style: none;
 	color: #fff;
+	font-size: 1.2rem;
 	transition: color .8s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 nav li:hover {
@@ -78,8 +80,9 @@ nav li:hover {
 .dropdown-menu {
 	display: none;
 	position: absolute;
-	z-index: 9;
-	right: 2rem;
+	right: 0;
+	left: 0;
+	margin: 0 auto;
 	top: 80px;
 	width: 300px;
 	height: 0;
