--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,10 +13,12 @@ import SocialCard from '../components/SocialCard.astro';
 				<img class="icon"  src="/icon.png" alt="icon"/>
 			</div>
 			<h1 class="text-4xl font-black text-center">apple</h1>
+			<p class="text-s text-center m-4 leading-tight">06 students<br>hobby -> photography<br></p>
 			<SocialCard/>
 			<div class="w-max m-4 typing">
-				<p class="animate-typing overflow-hidden whitespace-nowrap border-r-4 border-r-white pr-5 text-xl text-white font-light mt-8 mb-8">Hi, I'm apple!<br>This page is about me.</p>
+				<p class="animate-typing overflow-hidden whitespace-nowrap border-r-4 border-r-white pr-5 text-xl text-white font-medium mt-8 mb-8">Hi, I'm apple!<br>This page is about me.</p>
 			</div>
+			
 			<div class="card">
 				<Card 
 					href='/photoshop.png',
@@ -39,6 +41,7 @@ import SocialCard from '../components/SocialCard.astro';
 			</div>
 		</main>
 	</div>
+	
 </Layout>
 
 <style>
@@ -78,6 +81,7 @@ import SocialCard from '../components/SocialCard.astro';
 		width: 70%;
 		max-width: 400px;
 		object-fit: cover;
+		border: solid 4px;
 		
 	}
 </style>
