--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,6 +20,18 @@ import SocialCard from '../components/SocialCard.astro';
 			</div>
 			
 			<div class="card">
+				<Card
+					href='python.png',
+					title='Python',
+					body='バックエンド開発',
+					desc='Programming',
+				/>
+				<Card
+					href='/typescript.png',
+					title='Typescript',
+					body='Web フロントエンド開発',
+					desc='Programming',
+				/>
 				<Card 
 					href='/photoshop.png',
 					title='Photoshop',
@@ -33,11 +45,16 @@ import SocialCard from '../components/SocialCard.astro';
 					desc='Software'
 				/>
 				<Card
-					href='python.png',
-					title='Python'
-					body='DiscordBot開発'
-					desc='Programming'
+					href='aftereffects.png',
+					title='AfterEffects',
+					body='VFX・動画編集',
+					desc='Software'
 				/>
+				<Card
+					href='aviutl.png',
+					title='Aviutl',
+					body='モーショングラフィックス制作',
+					desc='Software'
 			</div>
 		</main>
 	</div>
