--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -19,7 +19,7 @@ const { href, title, body, desc} = Astro.props;
 			<p class="desc text-center text-white text-sm bg-gray-700 shrink-0 rounded-2xl font-semibold tracking-wider">{desc}</p>
 			<div class="card-main flex flex-row">
 				<div class="title flex flex-col">
-					<h5 class="text-xl text-black font-medium my-0.5">{title}</h5>
+					<h5 class="text-xl text-black font-medium">{title}</h5>
 					<p class="text-sm text-black font-base">{body}</p>
 				</div>
 				<div class="info">
